--- a/style.css
+++ b/style.css
@@ -97,9 +97,8 @@ ul {
   display: flex;
   align-items: center;
   flex-direction: column;
-  background-color: #080a0a;
+  background-color: #101820;
   color: #f3f3f3;
-  background-image: url('./img/background.png');
 }
 
 .landingLinks h1 {
